unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/FSC_Relationship_Record_Type_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Maps Account-Account Relationship record types to Reciprocal Role record types for FSC relationship management.</description>
    <label>FSC Relationship Record Type Mapping</label>
    <pluralLabel>FSC Relationship Record Type Mappings</pluralLabel>
</CustomObject>