unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/fields/AAR_Record_Type_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>AAR_Record_Type_Developer_Name__c</fullName>
    <description>Developer name of the Account-Account Relationship record type.</description>
    <externalId>true</externalId>
    <label>AAR Record Type Dev Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>