unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When unchecked, this mapping is ignored at runtime.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>