unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/fields/Reciprocal_Role_RT_Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Role_RT_Dev_Name__c</fullName>
    <description>Primary Reciprocal Role record type developer name used for this AAR record type.</description>
    <label>Reciprocal Role RT Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>