unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/fields/Reciprocal_Role_RT_Fallbacks__c.field-meta.xml
<CustomField>
    <fullName>Reciprocal_Role_RT_Fallbacks__c</fullName>
    <description>Optional semicolon-separated Reciprocal Role record type developer names tried when the primary record type is unavailable.</description>
    <label>Reciprocal Role RT Fallbacks</label>
    <length>255</length>
    <type>Text</type>
</CustomField>