unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/fields/Sort_Order__c.field-meta.xml
<CustomField>
    <fullName>Sort_Order__c</fullName>
    <description>Display order for administrators reviewing mappings.</description>
    <label>Sort Order</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>