unpackaged/main/default/objects/FSC_Relationship_Record_Type_Mapping__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>AAR_Record_Type_Developer_Name__c</columns>
    <columns>Reciprocal_Role_RT_Dev_Name__c</columns>
    <columns>Reciprocal_Role_RT_Fallbacks__c</columns>
    <columns>Is_Active__c</columns>
    <columns>Sort_Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>